tdf#148864 Qt switch QtObjectWindow to QWidget

... and therefore rename it to QtObjectWidget

Replacement of the QWidget with QWindow originally happened in
commit 56b19f9a814ae5a39ed760ee542d715493cd0bf3 ("tdf#121247,
tdf#121266 KDE5: Add basic support for OpenGL"), but that
unfortunately has no info for a reason. Then the code was further
complicated in commit 25edbded9946801effd117b9c46de0f8b4bc5632
("tdf#125517 Qt5 implement a minimal Qt5ObjectWindow") and a few
follow up fixes to restore input and focus forwarding.

But appearingly all this QWindow handling isn't necessary and just
returning to a QWidget based class fixes the problems with the
video overlay (AKA QWidget::winId()) and video playback for good.

The OpenGL Impress transition (Fade) mentioned in the original
tdf#121266 bug still works.

This also adds the previously missing SolarMutexGuards to all the
overridden QtObjectWidget functions, which I accidently triggered
in gdb while debugging this.

And as intented in commit 0e3c3b842e14b9646d3697cf1266be21359e0f13
("tdf#122293 qt5: Use "alien widgets" by default on Wayland") just
use alien widgets on Wayland. This is already breaking Emscripten
and not needed for X11 in my tests.

Change-Id: Ia22cabfd4f3585dc7fa3f9f18a913c5bd1987dd8